--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jesse.</title>
+    <title>who.</title>
 
     <link rel="stylesheet" href="./style.css">
 
@@ -13,21 +13,24 @@
 <body>
     <center>
         <div class="centered">
-            <span class="fs-2 header animated-underline  px-2">
-                "Who is this guy?"
+            <span class="fs-3 header px-2">
+                "<span class="script">wH</span><span class="pixelated">O</span>&nbsp;
+                <i class="serif">is</i> . . tHIS <span class="pixelated">guy</span>
+                <span class="script">??</span>
+                "
             </span>
-            &nbsp; . . . like seriously, who <i>is</i> he?<hr>
+            &nbsp; . . . ( <span class="fs-5 barcode">like seriously, who IS he?</span> )<hr>
             <br>
 
             <div class="bobbing-small">
                 <div class="row text-start inverted">
                     <div class="col">
-                        I love (fine) <u>arts</u> and <i>programming</i> things, as well as making <b>games</b>.
+                        I love (fine) <u class="script">arts</u>, <i class="serif">programming</i>, and making <b class="pixelated">games</b>.
                     </div>
                 </div>
                 <hr>
                 <div class="row text-start">
-                    <div class="col">Email:</div>
+                    <div class="col pixelated">Email:</div>
                     <div class="col"><a href="mailto:blueberry21007@gmail.com">blueberry21007@gmail.com</a></div>
                 </div>
                 <div class="row text-start">
@@ -35,7 +38,7 @@
                     <div class="col"><a href="https://github.com/blueberrytech123">BlueberryTech123</a></div>
                 </div>
                 <div class="row text-start">
-                    <div class="col">Github (but better):</div>
+                    <div class="col">Github (but <span class="script">better</span>):</div>
                     <div class="col"><a href="https://github.com/jessewithoutani">jessewithoutani</a></div>
                 </div>
                 
@@ -48,7 +51,7 @@
             </div>
             <br>
             <p class="blinking" onclick="window.location.href = 'index.html';" style="cursor: grab;">
-                Click me to go back <span class="animated-underline inverted px-2">B A C K</span>.
+                take me <span class="animated-underline inverted px-2 script">B A C K</span>.
             </p>
         </div>
     </center>
