--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 <body>
     <center>
         <div class="centered">
-            <span class="fs-2 header animated-underline  px-2">
-                Jesse L.
+            <span class="fs-2 header px-2">
+                <span class="script fs-1">j</span>
+                E
+                <span class="pixelated">ssss</span>
+                <span class="serif">sSS</span>
+                <span class="script">e</span>
             </span>
-            &nbsp; . . . Arts and CompSci student<hr>
+            &nbsp;. . . . . . . . . . . . . Li<br>
+            &nbsp;( <span class="barcode fs-5">ARts & cOMPsCI sssTUDENTTT</span> )<hr>
             <br>
 
             <div class="bobbing">
@@ -26,7 +31,7 @@
                 <img src="./platform.png" class="platform z-0 bobbing-small">
             </div>
             <br>
-            <p class="blinking">Click on an icon to continue.</p>
+            <!-- <p class="blinking">Click on an icon to continue.</p> -->
         </div>
     </center>
 </body>
