--- a/me.html
+++ b/me.html
@@ -13,10 +13,11 @@
 <body style="background: #000 !important; color: #f06 !important;">
     <center>
         <div class="centered">
-            <p class="blinking">?</p>
+            <p class="blinking script fs-1">...?</p>
+            ( <span class="barcode fs-5">hello please drink some water &lt;3</span> )<br>
             <img style="width: 250px;" src="./me.png"><br><br>
             <p onclick="window.location.href = 'index.html';" style="cursor: grab;">
-                return <span class="animated-underline">B A C K</span>.
+                i <span class="pixelated">want</span> <span class="script">B A C K</span>.
             </p>
         </div>
     </center>
